# DreamHeroes

./: .gitignore  CMakeLists.txt  server.sln
CurlTest/: CMakeLists.txt  CurlTest.cpp  CurlTest.vcxproj  platform_client.cpp  platform_client.h  stdafx.h
battleserver/: LocationVector.h  ReadMe.txt  UpdateMask.h  battleserver.cpp  battleserver.vcxproj  stdafx.cpp  stdafx.h
common/: common.vcxproj  common_template.h  cur_http_client.cpp  message_interface.cpp  protoc_common.h  server_frame.cpp  tcpserver.cpp  tcpsession.cpp  tcpsession.h  thread_buffer.h  utilities.cpp  utilities.h  新建文本文档.txt
databaseserver/: db_quest.cpp  db_quest.h  game_session.cpp  game_session.h  server.cpp  stdafx.h
gameserver/: DreamHero.cpp  DreamHero.h  DreamHeroManager.cpp  DreamHeroManager.h  GSHttpManager.cpp  GSHttpManager.h  GameConfig.cpp  GameConfig.h  HttpManager.cpp  HttpManager.h  RankManager.cpp  RankManager.h  RecordManager.cpp  RecordManager.h  ShopSalesPromotionManager.cpp  ShopSalesPromotionManager.h  db_client .cpp  gameserver.vcxproj  gate_session.cpp  main.cpp  platform_client.cpp  platform_client.h  server.cpp  server.h  session.cpp  session.h  stdafx.cpp  stdafx.h
gateserver/: game_client.cpp  stdafx.h  user_manager.cpp  user_manager.h  user_session.cpp  user_session.h
login/: LGHttpManager.cpp  account_manager.cpp  account_manager.h  login.vcxproj  login_config.cpp  login_config.h  server.cpp  stdafx.h  user_session.cpp  user_session.h
message/: battle.proto  common.proto  dream_heroes.proto  login.proto  msg_game_db.proto  msg_game_platform.proto
(+27 files in other folders)
